--- a/Home/styles.css
+++ b/Home/styles.css
@@ -7,42 +7,52 @@
 }
 
 body {
-  background-color: #3e3e46;
+  background-color: rgb(98, 98, 210);
   width: 100%;
-  height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
 }
 
-body .log{
+body .log {
   padding: 30px;
-  display: block;
+  display: flex;
   justify-content: center;
   align-items: center;
+  background: rgb(102, 102, 218);
 }
 
 body .caixa {
-  background-color: #1f1f65;
+  background-color: rgb(77, 77, 154);
   align-items: center;
-  display: block;
+  display: flex;
   border-radius: 6px;
   padding-bottom: 25px;
+  padding-top: 18px;
   text-align: center;
+  color: aliceblue;
 }
 
 .logo {
   max-width: 600px;
-  margin-bottom: 24px;
+}
+
+.container {
   align-items: center;
-  justify-content: center;
-  display: block;
+  padding-bottom: 15px;
+  text-align: center;
+  background-color: rgb(98, 98, 210);
+  justify-items: center;
+  display: grid;
 }
 
 .container-input {
   max-width: 480px;
   margin: 14px 0;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
 }
 
 .container-input span {
@@ -60,70 +70,87 @@ body .caixa {
   margin-top: 8px;
 }
 
+.senhas-armazenadas {
+  width: 115px;
+  border-radius: 5px;
+  margin: 10px;
+}
+
 .button-cta {
-  height: 40px;
-  background-color: green;
-  border: 0;
-  border-radius: 4px;
-  cursor: pointer;
+  height: 35px;
   margin-top: 40px;
   font-weight: bold;
+
+  text-align: center;
+  color: white;
+
+  border: 0;
+  border-radius: 4px;
+
+  background-color: rgb(108, 135, 162);
   font-size: 18px;
-  transition: transform 0.5s;
+  transition: all 0.3s ease-in-out;
+
+  cursor: pointer;
 }
 
 .button-cta:hover {
   transform: scale(1.05);
-  background: rgb(108, 149, 49);
-  display: block;
+  background: rgb(59, 137, 215);
 }
 
 .container-password {
   max-width: 480px;
+
   margin: 14px 0;
   display: flex;
   align-items: center;
   flex-direction: column;
   cursor: pointer;
+  justify-content: space-between;
 }
+
 .title {
   text-align: center;
-  color: wheat;
+  color: whitesmoke;
   font-size: 28px;
-  margin-top: 24px;
-  margin-bottom: 8px;
+  align-items: center;
+  padding-bottom: 5px;
+  border-radius: 5px;
+  padding: 0;
 }
 
 .password {
   height: 60px;
-  background-color: rgb(68, 62, 62);
-  border-radius: 4px;
-  display: flex;
+  background-color: rgb(108, 135, 162);
+  border-radius: 5px;
+  display: grid;
   align-items: center;
   justify-content: center;
   color: white;
-  border: 1px solid #3e3e46;
-  transition: transform 0.5s;
+  border: 0;
+  transition: all 0.3s ease-in-out;
 }
 
 .password:hover {
   transform: scale(1.05);
+  background: rgb(59, 137, 215);
 }
 
 .tootip {
-  color: white;
+  color: rgb(252, 247, 247);
   position: relative;
-  top: 20px;
-  padding: 6px 8px;
-  background: #151313;
+  top: 14px;
+  border-bottom: 100px;
+  background: rgb(35, 35, 56);
   text-align: center;
   font-size: 16px;
   border-radius: 6px;
   visibility: hidden;
   opacity: 0;
   transition: all 0/5s ease-in-out;
-  border-bottom: 20px;
   display: block;
+  padding: 5px;
 }
 
 .hide {
@@ -137,18 +164,26 @@ body .caixa {
 }
 
 footer {
+  display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top: 105px;
-  display: block;
+  display: flex;
+  color: rgb(247, 240, 240);
+  margin-top: 2px;
+  position: fixed;
+  bottom: 0;
 }
 
 .rodape {
-  background-color: #1f1f65;
+  width: 100%;
+  height: 70px;
+
+  display: flex;
   align-items: center;
-  text-align: center;
-  justify-content: last baseline;
+  justify-content: center;
+
+  background-color: rgb(77, 77, 154);
+
   border-radius: 10px;
-  padding-top: 20px;
 }
